# aegis-runtime

./: Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/aegis-ads/: Cargo.toml
crates/aegis-ads/src/: lib.rs  parser.rs  types.rs
crates/aegis-audit/: Cargo.toml
crates/aegis-audit/src/: lib.rs
crates/aegis-cli/: Cargo.toml
crates/aegis-cli/src/: main.rs
crates/aegis-sandbox/: Cargo.toml
crates/aegis-sandbox/src/: fs_policy.rs  lib.rs  manager.rs
crates/aegisd/: Cargo.toml
crates/aegisd/src/: main.rs
examples/: inbox-manager.toml
