[workspace]
members = [
    "crates/aegis-ads",
    "crates/aegis-sandbox",
    "crates/aegis-audit",
    "crates/aegisd",
    "crates/aegis-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Tyler"]
description = "Agent Execution, Governance, and Isolation System"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
nix = { version = "0.27", features = ["mount", "sched", "signal", "user", "fs"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
globset = "0.4"
