[package]
name = "aegis-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Append-only, tamper-evident audit engine for AEGIS"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
