[package]
name = "aegis-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for AEGIS - agent governance and isolation"

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
aegis-ads = { path = "../aegis-ads" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
